--- a/ComcastCRMGUIFramework/pom.xml
+++ b/ComcastCRMGUIFramework/pom.xml
@@ -8,6 +8,43 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   
+  <profiles>
+  <profile>
+  <id>FRT</id>
+   <build>
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>suite_fullRegressionTest.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+</build>
+  </profile>
+  <profile>
+  <id>ST</id>
+   <build>
+  <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>suite_smokeTest.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+</build>
+  </profile>
+  </profiles>
+  
   <dependencies>
   <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
@@ -51,4 +88,5 @@
 </dependency>
   
   </dependencies>
+ 
 </project>
